# PyManifold

./: bot.py  pyproject.toml
.github/workflows/: bot.yaml
arbitrage-bot/: bot.py  public_config.py  pyproject.toml  secret_config.py
bots/: arbitrage-bot.py  secret_config.py
pymanifold/: __init__.py  bot.py  credentials.py  lib.py  types.py
pymanifold/utils/: __init__.py  kelly.py  math.py
tests/: test_pymanifold.py
