[tool.poetry]
name = "arbitrage-bot"
version = "0.1.0"
description = ""
authors = ["Franklin Silveira Baldo <franklinbaldo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
manifoldpy = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
